[project]
name = "pip_test"
description = "Prove pyproject.toml files"
version = "0.1.0"
authors = [
    { name = "Antonio German Marquez Trujillo", email = "germanoctako@gmail.com" }
]
dependencies = [
    "Jinja2>1.2,>=2.2"
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
