[metadata]
name = pip_test
version = 0.1.0
author = Antonio German Marquez Trujillo
author_email = germanoctako@gmail.com
description = Prove setup.cfg files

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    urllib3>=1.21.1,<1.27
    flask>1.0,<2.0
    Werkzeug>=2.2.2

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
